src/strace/parser/snapshots/shh__strace__parser__tests__access.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"382944      0.000036 access(\\\"\\\\x2f\\\\x65\\\\x74\\\\x63\\\\x2f\\\\x6c\\\\x64\\\\x2e\\\\x73\\\\x6f\\\\x2e\\\\x70\\\\x72\\\\x65\\\\x6c\\\\x6f\\\\x61\\\\x64\\\", R_OK) = -1 ENOENT (No such file or directory)\",\n&HashSet::from([\"access\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 382944,
  rel_ts: 0.000036,
  name: "access",
  args: [
    Buffer(BufferExpression(
      value: [
        47,
        101,
        116,
        99,
        47,
        108,
        100,
        46,
        115,
        111,
        46,
        112,
        114,
        101,
        108,
        111,
        97,
        100,
      ],
      type_: Unknown,
    )),
    Integer(IntegerExpression(
      value: NamedSymbol("R_OK"),
      metadata: None,
    )),
  ],
  ret_val: IntegerExpression(
    value: Literal(-1),
    metadata: Some([
      69,
      78,
      79,
      69,
      78,
      84,
      32,
      40,
      78,
      111,
      32,
      115,
      117,
      99,
      104,
      32,
      102,
      105,
      108,
      101,
      32,
      111,
      114,
      32,
      100,
      105,
      114,
      101,
      99,
      116,
      111,
      114,
      121,
      41,
    ]),
  ),
)))
