src/strace/parser/snapshots/shh__strace__parser__tests__bind.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"688129      0.000023 bind(4<\\\\x73\\\\x6f\\\\x63\\\\x6b\\\\x65\\\\x74\\\\x3a\\\\x5b\\\\x34\\\\x31\\\\x38\\\\x34\\\\x35\\\\x32\\\\x32\\\\x5d>, {sa_family=AF_UNIX, sun_path=@\\\"\\\\x62\\\\x31\\\\x39\\\\x33\\\\x64\\\\x30\\\\x62\\\\x30\\\\x63\\\\x63\\\\x64\\\\x37\\\\x30\\\\x35\\\\x66\\\\x39\\\\x2f\\\\x62\\\\x75\\\\x73\\\\x2f\\\\x73\\\\x79\\\\x73\\\\x74\\\\x65\\\\x6d\\\\x63\\\\x74\\\\x6c\\\\x2f\\\"}, 34) = 0\",\n&HashSet::from([\"bind\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 688129,
  rel_ts: 0.000023,
  name: "bind",
  args: [
    Integer(IntegerExpression(
      value: Literal(4),
      metadata: Some([
        115,
        111,
        99,
        107,
        101,
        116,
        58,
        91,
        52,
        49,
        56,
        52,
        53,
        50,
        50,
        93,
      ]),
    )),
    Struct({
      "sa_family": Integer(IntegerExpression(
        value: NamedSymbol("AF_UNIX"),
        metadata: None,
      )),
      "sun_path": Buffer(BufferExpression(
        value: [
          98,
          49,
          57,
          51,
          100,
          48,
          98,
          48,
          99,
          99,
          100,
          55,
          48,
          53,
          102,
          57,
          47,
          98,
          117,
          115,
          47,
          115,
          121,
          115,
          116,
          101,
          109,
          99,
          116,
          108,
          47,
        ],
        type_: AbstractPath,
      )),
    }),
    Integer(IntegerExpression(
      value: Literal(34),
      metadata: None,
    )),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(0),
    metadata: None,
  )),
)))
