src/strace/parser/snapshots/shh__strace__parser__tests__epoll-2.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"3487       0.000130 epoll_pwait(4<\\\\x61\\\\x6e\\\\x6f\\\\x6e\\\\x5f\\\\x69\\\\x6e\\\\x6f\\\\x64\\\\x65\\\\x3a\\\\x5b\\\\x65\\\\x76\\\\x65\\\\x6e\\\\x74\\\\x70\\\\x6f\\\\x6c\\\\x6c\\\\x5d>, [{events=EPOLLOUT, data={u32=833093633, u64=9163493471957811201}}, {events=EPOLLOUT, data={u32=800587777, u64=9163493471925305345}}], 128, 0, NULL, 0) = 2\",\n&HashSet::from([\"epoll_pwait\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 3487,
  rel_ts: 0.00013,
  name: "epoll_pwait",
  args: [
    Integer(IntegerExpression(
      value: Literal(4),
      metadata: Some([
        97,
        110,
        111,
        110,
        95,
        105,
        110,
        111,
        100,
        101,
        58,
        91,
        101,
        118,
        101,
        110,
        116,
        112,
        111,
        108,
        108,
        93,
      ]),
    )),
    Collection(
      complement: false,
      values: [
        (None, Struct({
          "data": Struct({
            "u32": Integer(IntegerExpression(
              value: Literal(833093633),
              metadata: None,
            )),
            "u64": Integer(IntegerExpression(
              value: Literal(9163493471957811201),
              metadata: None,
            )),
          }),
          "events": Integer(IntegerExpression(
            value: NamedSymbol("EPOLLOUT"),
            metadata: None,
          )),
        })),
        (None, Struct({
          "data": Struct({
            "u32": Integer(IntegerExpression(
              value: Literal(800587777),
              metadata: None,
            )),
            "u64": Integer(IntegerExpression(
              value: Literal(9163493471925305345),
              metadata: None,
            )),
          }),
          "events": Integer(IntegerExpression(
            value: NamedSymbol("EPOLLOUT"),
            metadata: None,
          )),
        })),
      ],
    ),
    Integer(IntegerExpression(
      value: Literal(128),
      metadata: None,
    )),
    Integer(IntegerExpression(
      value: Literal(0),
      metadata: None,
    )),
    Integer(IntegerExpression(
      value: NamedSymbol("NULL"),
      metadata: None,
    )),
    Integer(IntegerExpression(
      value: Literal(0),
      metadata: None,
    )),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(2),
    metadata: None,
  )),
)))
