src/strace/parser/snapshots/shh__strace__parser__tests__epoll.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"114586      0.000075 epoll_ctl(3<\\\\x61\\\\x6e\\\\x6f\\\\x6e\\\\x5f\\\\x69\\\\x6e\\\\x6f\\\\x64\\\\x65\\\\x3a\\\\x5b\\\\x65\\\\x76\\\\x65\\\\x6e\\\\x74\\\\x70\\\\x6f\\\\x6c\\\\x6c\\\\x5d>, EPOLL_CTL_ADD, 4<\\\\x73\\\\x6f\\\\x63\\\\x6b\\\\x65\\\\x74\\\\x3a\\\\x5b\\\\x37\\\\x33\\\\x31\\\\x35\\\\x39\\\\x38\\\\x5d>, {events=EPOLLIN, data={u32=4, u64=4}}) = 0\",\n&HashSet::from([\"epoll_ctl\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 114586,
  rel_ts: 0.000075,
  name: "epoll_ctl",
  args: [
    Integer(IntegerExpression(
      value: Literal(3),
      metadata: Some([
        97,
        110,
        111,
        110,
        95,
        105,
        110,
        111,
        100,
        101,
        58,
        91,
        101,
        118,
        101,
        110,
        116,
        112,
        111,
        108,
        108,
        93,
      ]),
    )),
    Integer(IntegerExpression(
      value: NamedSymbol("EPOLL_CTL_ADD"),
      metadata: None,
    )),
    Integer(IntegerExpression(
      value: Literal(4),
      metadata: Some([
        115,
        111,
        99,
        107,
        101,
        116,
        58,
        91,
        55,
        51,
        49,
        53,
        57,
        56,
        93,
      ]),
    )),
    Struct({
      "data": Struct({
        "u32": Integer(IntegerExpression(
          value: Literal(4),
          metadata: None,
        )),
        "u64": Integer(IntegerExpression(
          value: Literal(4),
          metadata: None,
        )),
      }),
      "events": Integer(IntegerExpression(
        value: NamedSymbol("EPOLLIN"),
        metadata: None,
      )),
    }),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(0),
    metadata: None,
  )),
)))
