src/strace/parser/snapshots/shh__strace__parser__tests__fstatfs-2.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"895683      0.000028 fstatfs(3, {f_type=PROC_SUPER_MAGIC, f_bsize=4096, f_blocks=0, f_bfree=0, f_bavail=0, f_files=0, f_ffree=0, f_fsid={val=[0, 0]}, f_namelen=255, f_frsize=4096, f_flags=ST_VALID|ST_NOSUID|ST_NODEV|ST_NOEXEC|ST_RELATIME}) = 0\",\n&HashSet::from([\"fstatfs\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 895683,
  rel_ts: 0.000028,
  name: "fstatfs",
  args: [
    Integer(IntegerExpression(
      value: Literal(3),
      metadata: None,
    )),
    Struct({
      "f_bavail": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "f_bfree": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "f_blocks": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "f_bsize": Integer(IntegerExpression(
        value: Literal(4096),
        metadata: None,
      )),
      "f_ffree": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "f_files": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "f_flags": Integer(IntegerExpression(
        value: BinaryOr([
          NamedSymbol("ST_VALID"),
          NamedSymbol("ST_NOSUID"),
          NamedSymbol("ST_NODEV"),
          NamedSymbol("ST_NOEXEC"),
          NamedSymbol("ST_RELATIME"),
        ]),
        metadata: None,
      )),
      "f_frsize": Integer(IntegerExpression(
        value: Literal(4096),
        metadata: None,
      )),
      "f_fsid": Struct({
        "val": Collection(
          complement: false,
          values: [
            (None, Integer(IntegerExpression(
              value: Literal(0),
              metadata: None,
            ))),
            (None, Integer(IntegerExpression(
              value: Literal(0),
              metadata: None,
            ))),
          ],
        ),
      }),
      "f_namelen": Integer(IntegerExpression(
        value: Literal(255),
        metadata: None,
      )),
      "f_type": Integer(IntegerExpression(
        value: NamedSymbol("PROC_SUPER_MAGIC"),
        metadata: None,
      )),
    }),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(0),
    metadata: None,
  )),
)))
