src/strace/parser/snapshots/shh__strace__parser__tests__fstatfs.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"244841      0.000033 fstatfs(6, {f_type=EXT2_SUPER_MAGIC, f_bsize=4096, f_blocks=231830864, f_bfree=38594207, f_bavail=26799417, f_files=58957824, f_ffree=54942232, f_fsid={val=[0x511787a8, 0x92a74a52]}, f_namelen=255, f_frsize=4096, f_flags=ST_VALID|ST_NOATIME}) = 0\",\n&HashSet::from([\"fstatfs\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 244841,
  rel_ts: 0.000033,
  name: "fstatfs",
  args: [
    Integer(IntegerExpression(
      value: Literal(6),
      metadata: None,
    )),
    Struct({
      "f_bavail": Integer(IntegerExpression(
        value: Literal(26799417),
        metadata: None,
      )),
      "f_bfree": Integer(IntegerExpression(
        value: Literal(38594207),
        metadata: None,
      )),
      "f_blocks": Integer(IntegerExpression(
        value: Literal(231830864),
        metadata: None,
      )),
      "f_bsize": Integer(IntegerExpression(
        value: Literal(4096),
        metadata: None,
      )),
      "f_ffree": Integer(IntegerExpression(
        value: Literal(54942232),
        metadata: None,
      )),
      "f_files": Integer(IntegerExpression(
        value: Literal(58957824),
        metadata: None,
      )),
      "f_flags": Integer(IntegerExpression(
        value: BinaryOr([
          NamedSymbol("ST_VALID"),
          NamedSymbol("ST_NOATIME"),
        ]),
        metadata: None,
      )),
      "f_frsize": Integer(IntegerExpression(
        value: Literal(4096),
        metadata: None,
      )),
      "f_fsid": Struct({
        "val": Collection(
          complement: false,
          values: [
            (None, Integer(IntegerExpression(
              value: Literal(1360496552),
              metadata: None,
            ))),
            (None, Integer(IntegerExpression(
              value: Literal(2460437074),
              metadata: None,
            ))),
          ],
        ),
      }),
      "f_namelen": Integer(IntegerExpression(
        value: Literal(255),
        metadata: None,
      )),
      "f_type": Integer(IntegerExpression(
        value: NamedSymbol("EXT2_SUPER_MAGIC"),
        metadata: None,
      )),
    }),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(0),
    metadata: None,
  )),
)))
