src/strace/parser/snapshots/shh__strace__parser__tests__getpid.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"641342      0.000022 getpid()           = 641314\",\n&HashSet::from([\"getpid\"])).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 641342,
  rel_ts: 0.000022,
  name: "getpid",
  args: [],
  ret_val: IntegerExpression(
    value: Literal(641314),
    metadata: None,
  ),
)))
